projects/zhangyongqiao/k8s/gateway/traefik/default-service-zyq.yaml


apiVersion: v1
kind: Service
metadata:
  namespace: kube-system
  name: service-traefik
spec:
  ports:
    - port: 80
      targetPort: 9000
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/instance: traefik                                                   
    app.kubernetes.io/name: traefik   

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: kube-system
  name: ingress-traefik
  annotations:
    kubernetes.io/ingress.class: traefik
    # traefik.ingress.kubernetes.io/rule-type: Path
spec:
  tls:
  - secretName: traefik-default-secret
    hosts:
    - ingress.zhangyongqiao.com
  rules:
    - host: ingress.zhangyongqiao.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: service-traefik
                port:
                  number: 80
# apiVersion: apps/v1
# kind: Deployment
# metadata:
#   name: game-2048
#   labels:
#     app: game-2048
# spec:
#   replicas: 2
#   selector:
#     matchLabels:
#       app: game-2048
#   template:
#     metadata:
#       labels:
#         app: game-2048
#     spec:
#       containers:
#         - image: alexwhen/docker-2048 # 2048 image
#           name: game-2048
#           ports:
#             - name: web
#               containerPort: 80
# ---
# apiVersion: v1
# kind: Service
# metadata:
#   name: game-2048
# spec:
#   selector:
#     app: game-2048
#   ports:
#     - port: 80
#       targetPort: web
# ---
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: ingress-2048
#   annotations:
#     kubernetes.io/ingress.class: "traefik"
#     cert-manager.io/cluster-issuer: "letsencrypt-staging"
# spec:
#   tls:
#   - secretName: default-auto-secret-2048
#     hosts:
#     - games.zhangyongqiao.com
#   rules:
#     - host: games.zhangyongqiao.com
#       http:
#         paths:
#           - path: /
#             pathType: Prefix
#             backend:
#               service:
#                 name: game-2048
#                 port:
#                   number: 80
